@@ -1,0 +1,12 @@
+#ifndef _OL_SINGLETON_H_
+#define _OL_SINGLETON_H_
+
+/** 
+ * @brief Check whether there is another instance running
+ * 
+ * 
+ * @return 1 if there is another instance running, otherwise return 0.
+ */
+int ol_is_running ();
+
+#endif /* _OL_SINGLETON_H_ */
